--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -11,6 +11,7 @@
     "micromatch": "^4.0.2",
     "prop-types": "^15.7.2",
     "react-email-editor": "^1.0.0",
+    "react-filter-box": "^3.3.0",
     "react-helmet": "^5.2.1",
     "webdatarocks": "^1.2.0",
     "yup": "^0.27.0"
