--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -14,6 +14,7 @@
     "react-filter-box": "^3.3.0",
     "react-helmet": "^5.2.1",
     "webdatarocks": "^1.2.0",
+    "with-location": "^1.1.0",
     "yup": "^0.27.0"
   },
   "peerDependencies": {
