--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -1,18 +1,23 @@
 {
   "name": "q3-admin",
-  "version": "1.7.3",
+  "version": "1.9.0",
   "main": "lib/index.js",
   "devDependencies": {
     "q3-ui-test-utils": "^1.1.3"
   },
   "dependencies": {
     "comparisons": "^2.0.1",
+    "flat": "^5.0.0",
+    "formik": "^2.1.3",
     "lodash": "^4.17.15",
     "micromatch": "^4.0.2",
     "prop-types": "^15.7.2",
     "react-email-editor": "^1.0.0",
+    "react-filter-box": "^3.3.0",
     "react-helmet": "^5.2.1",
+    "useful-state": "^1.2.0",
     "webdatarocks": "^1.2.0",
+    "with-location": "^1.1.0",
     "yup": "^0.27.0"
   },
   "peerDependencies": {
