--- a/packages/q3-ui-filters/package.json
+++ b/packages/q3-ui-filters/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.31",
+    "@material-ui/pickers": "^3.2.10",
     "@reach/router": "^1.2.1",
     "decode-uri-component": "^0.2.0",
     "formik": "^2.0.4",
