--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "comparisons": "^2.0.1",
     "flat": "^5.0.0",
-    "formik": "^2.1.3",
+    "formik": "^2.0.4",
     "lodash": "^4.17.15",
     "micromatch": "^4.0.2",
     "prop-types": "^15.7.2",
@@ -30,11 +30,12 @@
     "q3-ui": "^0.2.4",
     "q3-ui-datatables": "^1.0.0",
     "q3-ui-dialog": "0.8.0",
+    "q3-ui-filters": "1.0.0",
     "q3-ui-forms": "0.6.2",
     "q3-ui-permissions": "^0.2.4",
     "q3-ui-rest": "^0.2.4",
     "react": "^16.9.0",
-    "react-i18next": "^10.12.5",
+    "react-i18next": "^11.3.1",
     "react-router-dom": "^5.0.1"
   }
 }
