--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -5,6 +5,7 @@
   "author": "Mike <mibberson@3merge.ca>",
   "license": "MIT",
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.0",
     "@date-io/moment": "^1.3.9",
     "@material-ui/pickers": "^3.2.4",
     "@tinymce/tinymce-react": "^3.3.2",
