--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -31,6 +31,7 @@
     "react-lazy-load-image-component": "^1.3.2",
     "react-router-dom": "^5.0.1",
     "react-social-icons": "^4.1.0",
+    "react-visibility-sensor": "^5.1.1",
     "react-window": "^1.8.5",
     "swiper": "^5.0.4",
     "url-loader": "^2.1.0",
