--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-module-resolver": "^0.15.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "jest-localstorage-mock": "^2.4.0",
     "jest-mock-axios": "^3.2.0",
     "lerna": "^3.18.1",
     "prettier": "^1.18.2",
