--- a/packages/q3-ui-filters/package.json
+++ b/packages/q3-ui-filters/package.json
@@ -14,6 +14,7 @@
     "decode-uri-component": "^0.2.0",
     "formik": "^2.0.4",
     "lodash": "^4.17.15",
+    "q3-ui-helpers": "^1.0.0",
     "react-i18next": "11.3.1",
     "with-location": "^1.1.0"
   },
