--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -25,6 +25,7 @@
     "query-string": "^6.8.3",
     "react-content-loader": "^4.2.2",
     "react-dropzone": "^10.1.10",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-highlight-words": "^0.16.0",
     "react-id-swiper": "^2.3.2",
