--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "eslint-import-resolver-lerna": "^1.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-module-resolver": "^0.15.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.19.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "jest-localstorage-mock": "^2.4.0",
