--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -6,6 +6,7 @@
     "q3-ui-test-utils": "^1.11.2"
   },
   "dependencies": {
+    "clsx": "^1.1.0",
     "comparisons": "^2.0.1",
     "flat": "^5.0.0",
     "formik": "^2.0.4",
