--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "resolutions": {
+    "kind-of": "^6.0.3"
+  },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/node": "^7.5.5",
