--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "decode-html": "^2.0.0",
     "downshift": "^3.2.12",
+    "gatsby-image": "^2.3.1",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
     "material-ui-chip-input": "^1.1.0",
