--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -37,7 +37,6 @@
     "q3-ui-permissions": "^0.2.4",
     "q3-ui-rest": "^0.2.4",
     "react": "^16.9.0",
-    "react-i18next": "^11.3.1",
-    "react-router-dom": "^5.0.1"
+    "react-i18next": "^11.3.1"
   }
 }
