--- a/packages/q3-ui-assets/package.json
+++ b/packages/q3-ui-assets/package.json
@@ -5,8 +5,7 @@
   "peerDependencies": {
     "@material-ui/core": "^4.4.3",
     "react": "^16.9.0",
-    "react-i18next": "^11.3.1",
-    "react-router-dom": "^5.0.1"
+    "react-i18next": "^11.3.1"
   },
   "dependencies": {
     "lodash.get": "^4.4.2"
