--- a/packages/q3-ui-helpers/package.json
+++ b/packages/q3-ui-helpers/package.json
@@ -6,7 +6,9 @@
     "q3-ui-test-utils": "^1.13.2"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "is-glob": "^4.0.1",
+    "lodash": "^4.17.15",
+    "minimatch": "^3.0.4"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
