--- a/packages/q3-ui-helpers/package.json
+++ b/packages/q3-ui-helpers/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
-    "minimatch": "^3.0.4"
+    "minimatch": "^3.0.4",
+    "moment": "^2.24.0"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
