--- a/packages/q3-ui-helpers/package.json
+++ b/packages/q3-ui-helpers/package.json
@@ -6,6 +6,7 @@
     "q3-ui-test-utils": "^1.13.2"
   },
   "dependencies": {
+    "@reach/router": "^1.3.3",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
     "minimatch": "^3.0.4",
