--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -31,6 +31,7 @@
     "react-helmet": "^5.2.1",
     "react-highlight-words": "^0.16.0",
     "react-id-swiper": "^2.3.2",
+    "react-joyride": "^2.2.1",
     "react-json-pretty": "^2.2.0",
     "react-lazy-load-image-component": "^1.3.2",
     "react-social-icons": "^4.1.0",
