--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -26,6 +26,7 @@
     "q3-ui-locale": "^1.14.4",
     "query-string": "^6.8.3",
     "react-content-loader": "^4.2.2",
+    "react-credit-cards": "^0.8.0",
     "react-dropzone": "^10.1.10",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
