--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -26,11 +26,13 @@
     "q3-ui-locale": "^1.14.4",
     "query-string": "^6.8.3",
     "react-content-loader": "^4.2.2",
+    "react-credit-cards": "^0.8.0",
     "react-dropzone": "^10.1.10",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-highlight-words": "^0.16.0",
     "react-id-swiper": "^2.3.2",
+    "react-joyride": "^2.2.1",
     "react-json-pretty": "^2.2.0",
     "react-lazy-load-image-component": "^1.3.2",
     "react-social-icons": "^4.1.0",
