--- a/packages/q3-ui-cart/package.json
+++ b/packages/q3-ui-cart/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.31",
     "class-names": "^1.0.0",
+    "lodash": "^4.17.15",
     "q3-components": "^1.15.3",
     "q3-ui-permissions": "^1.13.17",
     "react-i18next": "11.3.1",
