--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -36,6 +36,7 @@
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@contentful/rich-text-types": "^14.1.0",
+    "add": "^2.0.6",
     "babel-preset-gatsby": "^0.2.11",
     "clean-css": "^4.2.1",
     "formik": "^2.0.4",
@@ -49,6 +50,7 @@
     "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-remove-trailing-slashes": "^2.2.3",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.5.6",
     "gatsby-plugin-sitemap": "^2.3.4",
     "gatsby-react-router-scroll": "^2.2.2",
@@ -59,6 +61,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
     "react-share": "^4.1.0",
-    "slugify": "^1.4.0"
+    "slugify": "^1.4.0",
+    "yarn": "^1.22.4"
   }
 }
