--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -43,6 +43,7 @@
     "gatsby-image": "^2.2.39",
     "gatsby-link": "^2.3.2",
     "gatsby-plugin-canonical-urls": "^2.2.3",
+    "gatsby-plugin-force-trailing-slashes": "^1.0.4",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-material-ui": "^2.1.6",
     "gatsby-plugin-netlify": "^2.2.3",
