--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -10,7 +10,7 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.51",
-    "@material-ui/pickers": "^3.2.8",
+    "@material-ui/pickers": "4.0.0-alpha.5",
     "@tinymce/tinymce-react": "^3.3.2",
     "axios": "^0.19.0",
     "class-names": "^1.0.0",
@@ -27,6 +27,7 @@
     "react-recaptcha-google": "^1.1.1",
     "react-window": "^1.8.5",
     "scriptjs": "^2.5.9",
+    "throttle-debounce": "^2.1.0",
     "useful-state": "^1.2.0",
     "with-location": "^1.3.6",
     "yup": "^0.28.5"
