--- a/packages/q3-ui-helpers/package.json
+++ b/packages/q3-ui-helpers/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "debounce-promise": "^3.1.2",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.15",
     "minimatch": "^3.0.4",
