--- a/packages/q3-ui-rest/package.json
+++ b/packages/q3-ui-rest/package.json
@@ -14,6 +14,7 @@
     "react": "^16.10.2"
   },
   "dependencies": {
+    "debounce-promise": "^3.1.2",
     "js-file-download": "^0.4.8",
     "react-dom": "^16.10.2"
   }
