--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -5,8 +5,7 @@
   "author": "Mike <mibberson@3merge.ca>",
   "license": "MIT",
   "dependencies": {
-    "@date-io/moment": "1.3.13",
-    "@material-ui/pickers": "^3.2.4",
+    "@material-ui/pickers": "4.0.0-alpha.5",
     "@tinymce/tinymce-react": "^3.3.2",
     "class-names": "^1.0.0",
     "classnames": "^2.2.6",
