--- a/packages/q3-ui-datatables/package.json
+++ b/packages/q3-ui-datatables/package.json
@@ -15,6 +15,7 @@
     "react-i18next": "11.4.0",
     "react-scroll-sync": "^0.7.1",
     "react-sortable-hoc": "^1.11.0",
+    "react-stickynode": "^3.0.2",
     "react-virtualized": "^9.21.2",
     "useful-state": "^1.2.0",
     "with-location": "^1.3.6"
