--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-mdx": "^1.7.0",
     "eslint-plugin-module-resolver": "^0.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.20.0",
