--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -16,6 +16,7 @@
     "overlayscrollbars": "^1.12.0",
     "overlayscrollbars-react": "^0.2.2",
     "prop-types": "^15.7.2",
+    "react-butterfiles": "^1.3.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-email-editor": "^1.0.0",
     "react-filter-box": "^3.3.0",
