--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.15",
     "micromatch": "^4.0.2",
     "mock-socket": "^9.0.3",
+    "moment": "^2.27.0",
     "overlayscrollbars": "^1.12.0",
     "overlayscrollbars-react": "^0.2.2",
     "prop-types": "^15.7.2",
