--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -14,6 +14,7 @@
     "@nivo/sankey": "^0.62.0",
     "clsx": "^1.1.1",
     "comparisons": "^2.2.7",
+    "debounce-promise": "^3.1.2",
     "flat": "^5.0.0",
     "formik": "^2.0.4",
     "lodash": "^4.17.19",
