--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "deploy": "yarn build && build-storybook --docs",
     "test": "jest --collectCoverage --silent --runInBand",
     "deploy-storybook": "storybook-to-ghpages -- --out=.out",
-    "e2e:stage": "cd ./example && yarn develop",
-    "e2e:setup": "yarn run cypress open",
-    "e2e:test": "yarn run cypress run",
-    "e2e": "yarn e2e:stage && yarn e2e:test"
+    "e2e:develop": "yarn workspace example develop",
+    "e2e:stage": "yarn workspace example serve -p 8000",
+    "e2e:watch": "yarn run cypress open",
+    "e2e:test": "yarn run cypress run"
   },
   "workspaces": [
     "example",
