--- a/packages/q3-ui-repeater/package.json
+++ b/packages/q3-ui-repeater/package.json
@@ -1,9 +1,9 @@
 {
   "name": "q3-ui-repeater",
-  "version": "1.19.32",
+  "version": "1.19.33",
   "main": "lib/index.js",
   "devDependencies": {
-    "q3-ui-test-utils": "^1.19.31"
+    "q3-ui-test-utils": "^1.19.33"
   },
   "dependencies": {
     "@material-ui/core": "^4.10.0",
@@ -12,11 +12,11 @@
     "@material-ui/pickers": "4.0.0-alpha.9",
     "axios": "^0.19.0",
     "lodash": "^4.17.19",
-    "q3-components": "^1.19.32",
-    "q3-ui-dialog": "^1.19.31",
-    "q3-ui-exports": "^1.19.31",
-    "q3-ui-forms": "^1.19.32",
-    "q3-ui-permissions": "1.19.31",
+    "q3-components": "^1.19.33",
+    "q3-ui-dialog": "^1.19.33",
+    "q3-ui-exports": "^1.19.33",
+    "q3-ui-forms": "^1.19.33",
+    "q3-ui-permissions": "^1.19.33",
     "react-i18next": "11.7.0",
     "useful-state": "^1.2.0"
   },
