--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -12,6 +12,7 @@
     "@nivo/line": "^0.62.0",
     "@nivo/pie": "^0.62.0",
     "@nivo/sankey": "^0.62.0",
+    "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "comparisons": "^2.2.7",
     "debounce-promise": "^3.1.2",
