--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -14,8 +14,10 @@
     "react-i18next": "11.7.0"
   },
   "dependencies": {
+    "alphabetize-object-keys": "^3.0.0",
     "classnames": "^2.2.6",
     "file-icon-vectors": "^1.0.0",
+    "lodash": "^4.17.19",
     "q3-ui-helpers": "^1.21.0",
     "react-butterfiles": "^1.3.3",
     "react-dropzone": "^11.0.2",
