--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-jest": "^26.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "cypress": "^4.12.1",
+    "cypress-file-upload": "^4.0.7",
     "dotenv": "^8.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
