--- a/package.json
+++ b/package.json
@@ -22,27 +22,24 @@
     "gatsby-theme-q3",
     "packages/*"
   ],
-  "resolutions": {
-    "lodash": "4.17.19"
-  },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
+    "@babel/cli": "^7.11.5",
     "@babel/node": "^7.10.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
     "@babel/plugin-transform-modules-commonjs": "^7.9.6",
-    "@babel/preset-env": "^7.10.0",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
+    "@babel/preset-env": "^7.11.5",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-knobs": "^6.0.21",
     "axios-mock-adapter": "^1.18.2",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "cypress": "^4.12.1",
-    "cypress-file-upload": "^4.0.7",
+    "cypress": "^5.1.0",
+    "cypress-file-upload": "^4.1.1",
     "dotenv": "^8.2.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^7.5.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-node-3merge": "^1.1.1",
     "eslint-config-prettier": "^6.11.0",
@@ -53,22 +50,22 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-mdx": "^1.8.1",
-    "eslint-plugin-module-resolver": "^0.17.0",
+    "eslint-plugin-mdx": "^1.8.2",
+    "eslint-plugin-module-resolver": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react": "^7.20.6",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.3.0",
+    "jest": "^26.4.2",
     "jest-localstorage-mock": "^2.4.3",
     "jest-mock-axios": "^4.2.0",
     "lerna": "^3.22.1",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.1",
     "prop-types": "^15.7.2",
-    "yarn-deduplicate": "^2.1.1",
+    "yarn-deduplicate": "^3.0.0",
     "yarn-workspace-sync-deps": "^0.3.2"
   },
   "dependencies": {
-    "@babel/core": "^7.11.1",
+    "@babel/core": "^7.11.5",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@contentful/rich-text-react-renderer": "^14.1.1",
@@ -79,70 +76,70 @@
     "@material-ui/pickers": "4.0.0-alpha.9",
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
-    "@storybook/addon-a11y": "^5.3.19",
-    "@storybook/addon-docs": "^5.3.19",
-    "@storybook/addon-viewport": "^5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-a11y": "^6.0.21",
+    "@storybook/addon-docs": "^6.0.21",
+    "@storybook/addon-viewport": "^6.0.21",
+    "@storybook/react": "^6.0.21",
     "@storybook/storybook-deployer": "^2.8.6",
     "@svgr/webpack": "^5.4.0",
     "@tinymce/tinymce-react": "^3.6.0",
     "add": "^2.0.6",
     "alphabetize-object-keys": "^3.0.0",
-    "axios": "^0.19.0",
+    "axios": "^0.20.0",
     "babel-loader": "^8.0.0-beta.1",
-    "babel-preset-gatsby": "^0.5.5",
+    "babel-preset-gatsby": "^0.5.8",
     "class-names": "^1.0.0",
     "classnames": "^2.2.6",
     "clean-css": "^4.2.1",
     "clsx": "^1.1.1",
-    "comparisons": "^2.2.7",
+    "comparisons": "^2.2.10",
     "dot-helpers": "^1.1.5",
     "exceljs": "^4.1.0",
     "file-saver": "^2.0.2",
     "flat": "^5.0.2",
     "formik": "^2.0.4",
-    "gatsby": "^2.24.37",
-    "gatsby-image": "^2.4.13",
+    "gatsby": "^2.24.53",
+    "gatsby-image": "^2.4.16",
     "gatsby-link": "^2.4.13",
     "gatsby-plugin-canonical-urls": "^2.3.10",
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
-    "gatsby-plugin-manifest": "^2.4.22",
+    "gatsby-plugin-manifest": "^2.4.27",
     "gatsby-plugin-material-ui": "^2.1.9",
-    "gatsby-plugin-netlify": "^2.3.12",
-    "gatsby-plugin-offline": "^3.2.22",
+    "gatsby-plugin-netlify": "^2.3.13",
+    "gatsby-plugin-offline": "^3.2.26",
     "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-remove-trailing-slashes": "^2.3.11",
     "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sharp": "^2.6.25",
-    "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-plugin-sharp": "^2.6.31",
+    "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-react-router-scroll": "^3.0.12",
-    "gatsby-source-contentful": "^2.3.35",
-    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-source-contentful": "^2.3.41",
+    "gatsby-source-filesystem": "^2.3.27",
     "gatsby-theme-q3": "^1.19.10",
-    "gatsby-transformer-sharp": "^2.5.11",
-    "i18next": "^19.6.2",
+    "gatsby-transformer-sharp": "^2.5.14",
+    "i18next": "^19.7.0",
     "is-glob": "^4.0.1",
     "js-cookie": "^2.2.1",
     "js-file-download": "^0.4.12",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "lodash.get": "^4.4.2",
     "material-ui-chip-input": "^1.1.0",
     "micromatch": "^4.0.2",
     "minimatch": "^3.0.4",
     "mock-socket": "^9.0.3",
     "moment": "2.27.0",
-    "notistack": "^0.9.17",
+    "notistack": "^1.0.0",
     "query-string": "^6.13.1",
     "react": "^16.10.2",
     "react-butterfiles": "^1.3.3",
-    "react-content-loader": "^5.1.0",
+    "react-content-loader": "^5.1.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^16.10.2",
-    "react-dropzone": "^11.0.2",
+    "react-dropzone": "^11.0.3",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
-    "react-i18next": "11.7.0",
+    "react-i18next": "11.7.2",
     "react-id-swiper": "^4.0.0",
     "react-joyride": "^2.2.1",
     "react-json-pretty": "^2.2.0",
@@ -152,14 +149,14 @@
     "react-sortable-hoc": "^1.11.0",
     "react-window": "^1.8.5",
     "scriptjs": "^2.5.9",
-    "simplebar-react": "^2.2.1",
+    "simplebar-react": "^3.0.0-beta.4",
     "slugify": "^1.4.4",
     "socket.io-client": "^2.3.0",
-    "swiper": "^6.0.4",
+    "swiper": "^6.1.2",
     "url-loader": "^4.1.0",
     "useful-state": "^1.2.0",
     "with-location": "^1.3.6",
-    "yarn": "^1.22.4",
+    "yarn": "^1.22.5",
     "yup": "^0.29.3"
   }
 }
