--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
     "axios": "^0.20.0",
+    "file-saver": "^2.0.2",
     "gatsby": "^2.24.53",
     "gatsby-theme-q3": "^1.24.2",
     "i18next": "^19.7.0",
