--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "comparisons": "^2.2.10",
+    "file-saver": "^2.0.2",
     "flat": "^5.0.2",
     "formik": "^2.0.4",
     "lodash": "^4.17.20",
