--- a/packages/q3-components/package.json
+++ b/packages/q3-components/package.json
@@ -14,6 +14,7 @@
     "q3-ui-forms": "^1.24.2",
     "react-i18next": "11.7.2",
     "useful-state": "^1.2.0",
+    "with-location": "^1.3.7",
     "yup": "^0.29.3"
   },
   "peerDependencies": {
