--- a/packages/q3-ui-locale/package.json
+++ b/packages/q3-ui-locale/package.json
@@ -11,7 +11,9 @@
     "yup": "^0.27.0"
   },
   "dependencies": {
+    "moment-timezone": "^0.5.31",
     "prop-types": "^15.7.2",
+    "q3-ui-helpers": "^1.24.3",
     "react": "^16.10.2"
   },
   "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
