--- a/packages/q3-components/package.json
+++ b/packages/q3-components/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.20",
     "moment": "2.27.0",
     "q3-ui-forms": "^1.24.2",
+    "q3-ui-locale": "^1.24.7",
     "react-i18next": "11.7.2",
     "useful-state": "^1.2.0",
     "with-location": "^1.3.7",
