--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "upload": "yarn build && lerna publish",
     "deploy": "yarn build && build-storybook --docs",
     "test": "jest --collectCoverage --silent --runInBand",
-    "deploy-storybook": "storybook-to-ghpages -- --out=.out",
+    "deploy-storybook": "storybook-to-ghpages -- --out=.out --docs",
     "e2e:develop": "yarn workspace example develop",
     "e2e:stage": "yarn workspace example serve -p 8000",
     "e2e:watch": "yarn run cypress open",
