--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -18,6 +18,7 @@
     "moment": "2.27.0",
     "notistack": "^1.0.0",
     "prop-types": "^15.7.2",
+    "q3-hooked": "^1.0.00",
     "react-butterfiles": "^1.3.3",
     "react-helmet": "^6.1.0",
     "socket.io-client": "^2.3.0",
