--- a/packages/q3-hooked/package.json
+++ b/packages/q3-hooked/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@reach/router": "^1.3.4",
     "prop-types": "^15.7.2",
+    "q3-ui-helpers": "^1.24.13",
+    "q3-ui-permissions": "^1.24.16",
     "react": "^17.0.1"
   },
   "peerDependencies": {}
