--- a/packages/q3-hooked/package.json
+++ b/packages/q3-hooked/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "q3-ui-helpers": "^1.24.13",
     "q3-ui-permissions": "^1.24.16",
