--- a/packages/q3-hooked/package.json
+++ b/packages/q3-hooked/package.json
@@ -5,10 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "axios": "^0.21.0",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "q3-ui-helpers": "^1.24.13",
     "q3-ui-permissions": "^1.24.16",
-    "react": "^16.10.2"
+    "react": "^16.10.2",
+    "react-i18next": "^11.7.3"
   },
   "peerDependencies": {}
 }
