--- a/packages/q3-hooked/package.json
+++ b/packages/q3-hooked/package.json
@@ -11,7 +11,8 @@
     "q3-ui-helpers": "^1.24.13",
     "q3-ui-permissions": "^1.24.16",
     "react": "^16.10.2",
-    "react-i18next": "^11.7.3"
+    "react-i18next": "^11.7.3",
+    "useful-state": "^1.2.1"
   },
   "peerDependencies": {}
 }
