--- a/packages/q3-ui-repeater/package.json
+++ b/packages/q3-ui-repeater/package.json
@@ -16,6 +16,7 @@
     "q3-ui-dialog": "^1.24.30",
     "q3-ui-exports": "^1.24.30",
     "q3-ui-forms": "^1.24.34",
+    "q3-ui-helpers": "^1.24.30",
     "q3-ui-permissions": "^1.24.30",
     "react-i18next": "11.7.3",
     "useful-state": "^1.2.0"
