--- a/packages/q3-ui-repeater/package.json
+++ b/packages/q3-ui-repeater/package.json
@@ -3,6 +3,8 @@
   "version": "1.25.1",
   "main": "lib/index.js",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
     "q3-ui-test-utils": "^1.24.30"
   },
   "dependencies": {
